@startuml
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
skinparam linetype ortho

title Snowflake URL Shorter - Class Diagram (Multi-Module, Hexagonal)

' --- Module: snowflake-core ---
package "Module: snowflake-core" #EEEEEE {
    package "io.dave.snowflake.domain.generator" {
        interface IdGenerator {
            +nextId(): Long
        }
        class SnowflakeIdGenerator {
            -workerId: Long
            -timeSource: Supplier<Long>
            -lastTimestamp: Long
            -sequence: Long
            +nextId(): Long
        }
        class PooledIdGenerator {
            -idGenerators: List<IdGenerator>
            -index: AtomicInteger
            +nextId(): Long
        }
        class Base62Encoder {
            {static} +ALPHABET: String
            {static} +encode(id: Long): String
        }
    }
}

' --- Module: snowflake-shorter-domain ---
package "Module: snowflake-shorter-domain" #CCFFCC {
    package "io.dave.snowflake.domain.model" {
        class ShortUrl {
            +value: String
        }
        class LongUrl {
            +value: String
        }
        class UrlMapping {
            +shortUrl: ShortUrl
            +longUrl: LongUrl
            +createdAt: Long
        }
        class OutboxEvent {
            +id: Long?
            +aggregateType: String
            +aggregateId: String
            +payload: String
            +createdAt: LocalDateTime
        }
    }

    package "io.dave.snowflake.domain.port" {
        interface RateLimiter {
            +isAllowed(key: String, limit: Int, windowInSeconds: Int): Boolean
        }
        package "outbound" {
            interface UrlPort {
                +save(mapping: UrlMapping): UrlMapping
                +saveAll(mappings: Flow<UrlMapping>): Flow<UrlMapping>
                +findByShortUrl(shortUrl: ShortUrl): UrlMapping?
            }
            interface OutboxPort {
                +save(event: OutboxEvent): OutboxEvent
                +findUnprocessedEvents(limit: Int): List<OutboxEvent>
                +deleteEvents(ids: List<Long>)
            }
            interface OutboundEventPort {
                +publish(mapping: UrlMapping)
            }
        }
    }

    package "io.dave.snowflake.domain.component" {
        class ShortUrlGenerator <<Domain Service>> {
            -idGenerator: PooledIdGenerator
            -urlPort: UrlPort
            +generate(): ShortUrl
        }
    }
}

' --- Module: snowflake-shorter ---
package "Module: snowflake-shorter" #CCEEFF {
    package "io.dave.snowflake.application.usecase" {
        class ShortenUrlUseCase <<UseCase>> {
            -shortUrlGenerator: ShortUrlGenerator
            -outboxPort: OutboxPort
            -outboundEventPort: OutboundEventPort
            +shorten(longUrlStr: String): UrlMapping
        }
    }

    package "io.dave.snowflake.application.worker" {
        class OutboxRelayWorker <<Worker>> {
            -outboxPort: OutboxPort
            -urlPort: UrlPort
            +processOutboxEvents()
        }
    }

    package "io.dave.snowflake.adapter.outbound" {
        package "persistence" {
            class OutboxPersistenceAdapter <<Adapter>> {
                -outboxRepository: OutboxRepository
                +save(event: OutboxEvent): OutboxEvent
            }
        }
    }
}

' --- Relationships ---

' Implementation
OutboxPort <|.. OutboxPersistenceAdapter

' Usage
ShortenUrlUseCase --> OutboxPort : uses
ShortenUrlUseCase --> OutboundEventPort : uses
OutboxRelayWorker --> OutboxPort : uses
OutboxRelayWorker --> UrlPort : uses

@enduml